--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         </article>
       </section>
       <ul id="ul-interval-container">
-        <li>Daily</li>
-        <li class="interval-active">Weekly</li>
-        <li>Monthly</li>
+        <li tabindex="1">Daily</li>
+        <li tabindex="2" class="interval-active">Weekly</li>
+        <li tabindex="3">Monthly</li>
       </ul>
     </header>
 
     <section class="activies-section">
-      <ul>
+      <ul id="ul-timers-container">
         <li>
           <article>
             <header>
@@ -81,9 +81,9 @@
                 </ul>
               </details>
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -116,9 +116,9 @@
                 </ul>
               </details>
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -152,9 +152,9 @@
               </details>
 
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -187,9 +187,9 @@
                 </ul>
               </details>
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -222,9 +222,9 @@
                 </ul>
               </details>
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -257,9 +257,9 @@
                 </ul>
               </details>
             </header>
-            <h1>32hrs</h1>
+            <h1>-</h1>
             <footer>
-              Last Week - 36hrs
+              -
             </footer>
           </article>
         </li>
@@ -269,13 +269,11 @@
   </main>
 
 
-  <div class="attribution">
+  <div class="attribution" style="color: aliceblue; margin-top: 1rem;">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Pablo321123">Pablo Vasconcelos</a>.
   </div>
 </body>
-
-
 <script>
 
   var is_reset_animation = false;
@@ -309,5 +307,7 @@
   })
 
 </script>
+<script src="static/index.js"></script>
+
 
 </html>
